// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerTestimonials slice should render correctly with CustomerTestimonialsSlice component 1`] = `
<div>
  <section
    class="customer-testimonials-main"
  >
    <lazyhydrate-stub
      idletimeout="2000"
      whenvisible="true"
    >
      <customertestimonialsslice-stub
        class="aos-init aos-animate"
        data-aos="fade-up"
        data-testid="first-variation"
      />
    </lazyhydrate-stub>
  </section>
</div>
`;

exports[`CustomerTestimonials slice should render correctly with Testimonials component 1`] = `
<div>
  <section
    class="customer-testimonials-main"
  >
    <lazyhydrate-stub
      idletimeout="2000"
      whenvisible="true"
    >
      <testimonials-stub
        class="aos-init aos-animate"
        data-aos="fade-up"
        data-testid="second-variation"
      />
    </lazyhydrate-stub>
  </section>
</div>
`;
